
			     BZFlag release notes

* add new updates here without heading until a release
* new GUI options menu - Frank Thilo
* exclude observers from /idlestats list - Frank Thilo
* server based scoring - Dave Brosius, Tim Riker
* max. number of observers now defaults to 3 instead of 0 - Frank Thilo
* Use high water marks for player cnts to reduce looping - Dave Brosius
* new bzfs option -tk: team killers do not die - Frank Thilo
* misc @observer mode fixes - Andrew Greig
* Improved Mac OS X support - Kevin Avila
* disallow dud flags (eg jump in a jump world) - Dave Brosius
* self destruct key, for stuck tanks - Dave Brosius
* team killers die - Tim Riker
* increase max player and robot counts - Tim Riker
* Fix 'Change Key Mapping' arrowkeys - Andrew Greig 
* show the time in upper right if no flag
* opacity in config - Dave Brosius, Tim Riker
* [UN]SILENCE - Dave Brosius, Tim Riker
* revert lag falling patch - Tim Riker, Dave Brosius
* teamgrab.wav - Dave Brosius
* improved texture mapping - unknown
* possible win32 installer bug - Chris Walters
* gcc 3.1+ patches - David Trowbridge

BZFlag 1.7e6 or Armoured Smashing Fist 2002 (was 1.7e5)
-------------------------------------------------------

* new HUD! - David Trowbridge, Tim Riker, many others
* added temporary bans (minutes) - Dave Brosius
* Can now build entire win32 installer from VC Workspace - Dave Brosius
* non-listserver connection gave 0.0.0.0 as host: fixed - Dave Brosius
* added private messages - Frank Thilo
* modified / added roaming support for observers - Frank Thilo
* added /idlekick server option - Frank Thilo
* fix /ban and add /unban - Frank Thilo
* allow both -mp # and -mp #,#,#,#,# - Frank Thilo
* CTF flag returning to base fixes - Frank Thilo
* sort teams by score, sort in self - janne hassinen, Tim Riker
* observer hack, should be a team - Frank Thilo
* /countdown, /lagwarn - Frank Thilo
* PatchId fixes - Frank Thilo, Tim Riker
* New lag measurement using pings - Frank Thilo