@@ -30,8 +30,10 @@
 
 #if defined(_MACOSX_)
 #include <OpenGL/gl.h>
+#include <OpenGL/glu.h>
 #else
 #include <GL/gl.h>
+#include <GL/glu.h>
 #endif
 
 #endif
